objectbox/lib/src/bindings/objectbox-c.dart


  /// /// Refine the definition of the property declared by the most recent obx_model_property() call, specifying flags.
  int model_property_flags(
    ffi.Pointer<OBX_model> model,
    int flags,
  ) {
    _model_property_flags ??= _dylib.lookupFunction<_c_model_property_flags,
        _dart_model_property_flags>('obx_model_property_flags');
    return _model_property_flags(
      model,
      flags,
    );
  }

  _dart_model_property_flags _model_property_flags;

  /// /// Refine the definition of the property declared by the most recent obx_model_property() call, declaring it a
  /// /// relation.
  /// /// @param target_entity The name of the entity linked to by the relation
  /// /// @param index_id Must be unique within this version of the model
  /// /// @param index_uid Used to identify relations between versions of the model. Must be globally unique.
  int model_property_relation(
    ffi.Pointer<OBX_model> model,
    ffi.Pointer<ffi.Int8> target_entity,
    int index_id,
    int index_uid,
  ) {
    _model_property_relation ??= _dylib.lookupFunction<
        _c_model_property_relation,
        _dart_model_property_relation>('obx_model_property_relation');
    return _model_property_relation(
      model,
      target_entity,
      index_id,
      index_uid,
    );
  }

  _dart_model_property_relation _model_property_relation;

  /// /// Refine the definition of the property declared by the most recent obx_model_property() call, adding an index.
  /// /// @param index_id Must be unique within this version of the model
  /// /// @param index_uid Used to identify relations between versions of the model. Must be globally unique.
  int model_property_index_id(
    ffi.Pointer<OBX_model> model,
    int index_id,
    int index_uid,
  ) {
    _model_property_index_id ??= _dylib.lookupFunction<
        _c_model_property_index_id,
        _dart_model_property_index_id>('obx_model_property_index_id');
    return _model_property_index_id(
      model,
      index_id,
      index_uid,
    );
  }

  _dart_model_property_index_id _model_property_index_id;

  /// /// Add a standalone relation between the active entity and the target entity to the model
  /// /// @param relation_id Must be unique within this version of the model
  /// /// @param relation_uid Used to identify relations between versions of the model. Must be globally unique.
  /// /// @param target_id The id of the target entity of the relation
  /// /// @param target_uid The uid of the target entity of the relation
  int model_relation(
    ffi.Pointer<OBX_model> model,
    int relation_id,
    int relation_uid,
    int target_id,
    int target_uid,
  ) {
    _model_relation ??=
        _dylib.lookupFunction<_c_model_relation, _dart_model_relation>(
            'obx_model_relation');
    return _model_relation(
      model,
      relation_id,
      relation_uid,
      target_id,
      target_uid,
    );
  }

  _dart_model_relation _model_relation;

  /// /// Set the highest ever known entity id in the model. Should always be equal to or higher than the
  /// /// last entity id of the previous version of the model
  void model_last_entity_id(
    ffi.Pointer<OBX_model> arg0,
    int entity_id,
    int entity_uid,
  ) {
    _model_last_entity_id ??= _dylib.lookupFunction<_c_model_last_entity_id,
        _dart_model_last_entity_id>('obx_model_last_entity_id');
    return _model_last_entity_id(
      arg0,
      entity_id,
      entity_uid,
    );
  }

  _dart_model_last_entity_id _model_last_entity_id;

  /// /// Set the highest ever known index id in the model. Should always be equal to or higher than the
  /// /// last index id of the previous version of the model
  void model_last_index_id(
    ffi.Pointer<OBX_model> model,
    int index_id,
    int index_uid,
  ) {
    _model_last_index_id ??= _dylib.lookupFunction<_c_model_last_index_id,
        _dart_model_last_index_id>('obx_model_last_index_id');
    return _model_last_index_id(
      model,
      index_id,
      index_uid,
    );
  }

  _dart_model_last_index_id _model_last_index_id;

  /// /// Set the highest every known relation id in the model. Should always be equal to or higher than the
  /// /// last relation id of the previous version of the model.
  void model_last_relation_id(
    ffi.Pointer<OBX_model> model,
    int relation_id,
    int relation_uid,
  ) {
    _model_last_relation_id ??= _dylib.lookupFunction<_c_model_last_relation_id,
        _dart_model_last_relation_id>('obx_model_last_relation_id');
    return _model_last_relation_id(
      model,
      relation_id,
      relation_uid,
    );
  }

  _dart_model_last_relation_id _model_last_relation_id;

  /// /// Set the highest ever known property id in the entity. Should always be equal to or higher than the
  /// /// last property id of the previous version of the entity.
  int model_entity_last_property_id(
    ffi.Pointer<OBX_model> model,
    int property_id,
    int property_uid,
  ) {
    _model_entity_last_property_id ??= _dylib.lookupFunction<
            _c_model_entity_last_property_id,
            _dart_model_entity_last_property_id>(
        'obx_model_entity_last_property_id');
    return _model_entity_last_property_id(
      model,
      property_id,
      property_uid,
    );
  }

  _dart_model_entity_last_property_id _model_entity_last_property_id;

  /// /// Create a default set of store options.
  /// /// @returns NULL on failure, a default set of options on success
  ffi.Pointer<OBX_store_options> opt() {
    _opt ??= _dylib.lookupFunction<_c_opt, _dart_opt>('obx_opt');
    return _opt();
  }

  _dart_opt _opt;

  /// /// Set the store directory on the options. The default is "objectbox".
  int opt_directory(
    ffi.Pointer<OBX_store_options> opt,
    ffi.Pointer<ffi.Int8> dir,
  ) {
    _opt_directory ??=
        _dylib.lookupFunction<_c_opt_directory, _dart_opt_directory>(
            'obx_opt_directory');
    return _opt_directory(
      opt,
      dir,
    );
  }

  _dart_opt_directory _opt_directory;

  /// /// Set the maximum db size on the options. The default is 1Gb.
  void opt_max_db_size_in_kb(
    ffi.Pointer<OBX_store_options> opt,
    int size_in_kb,
  ) {
    _opt_max_db_size_in_kb ??= _dylib.lookupFunction<_c_opt_max_db_size_in_kb,
        _dart_opt_max_db_size_in_kb>('obx_opt_max_db_size_in_kb');
    return _opt_max_db_size_in_kb(
      opt,
      size_in_kb,
    );
  }

  _dart_opt_max_db_size_in_kb _opt_max_db_size_in_kb;

  /// /// Set the file mode on the options. The default is 0644 (unix-style)
  void opt_file_mode(
    ffi.Pointer<OBX_store_options> opt,
    int file_mode,
  ) {
    _opt_file_mode ??=
        _dylib.lookupFunction<_c_opt_file_mode, _dart_opt_file_mode>(
            'obx_opt_file_mode');
    return _opt_file_mode(
      opt,
      file_mode,
    );
  }

  _dart_opt_file_mode _opt_file_mode;

  /// /// Set the maximum number of readers on the options.
  /// /// "Readers" are an finite resource for which we need to define a maximum number upfront.
  /// /// The default value is enough for most apps and usually you can ignore it completely.
  /// /// However, if you get the OBX_ERROR_MAX_READERS_EXCEEDED error, you should verify your threading.
  /// /// For each thread, ObjectBox uses multiple readers.
  /// /// Their number (per thread) depends on number of types, relations, and usage patterns.
  /// /// Thus, if you are working with many threads (e.g. in a server-like scenario), it can make sense to increase the
  /// /// maximum number of readers.
  /// /// Note: The internal default is currently around 120. So when hitting this limit, try values around 200-500.
  void opt_max_readers(
    ffi.Pointer<OBX_store_options> opt,
    int max_readers,
  ) {
    _opt_max_readers ??=
        _dylib.lookupFunction<_c_opt_max_readers, _dart_opt_max_readers>(
            'obx_opt_max_readers');
    return _opt_max_readers(
      opt,
      max_readers,
    );
  }

  _dart_opt_max_readers _opt_max_readers;

  /// /// Set the model on the options. The default is no model.
  /// /// NOTE: the model is always freed by this function, including when an error occurs.
  int opt_model(
    ffi.Pointer<OBX_store_options> opt,
    ffi.Pointer<OBX_model> model,
  ) {
    _opt_model ??=
        _dylib.lookupFunction<_c_opt_model, _dart_opt_model>('obx_opt_model');
    return _opt_model(
      opt,
      model,
    );
  }

  _dart_opt_model _opt_model;

  /// /// Set the model on the options copying the given bytes. The default is no model.
  int opt_model_bytes(
    ffi.Pointer<OBX_store_options> opt,
    ffi.Pointer<ffi.Void> bytes,
    int size,
  ) {
    _opt_model_bytes ??=
        _dylib.lookupFunction<_c_opt_model_bytes, _dart_opt_model_bytes>(
            'obx_opt_model_bytes');
    return _opt_model_bytes(
      opt,
      bytes,
      size,
    );
  }

  _dart_opt_model_bytes _opt_model_bytes;

  /// /// Like obx_opt_model_bytes BUT WITHOUT copying the given bytes.
  /// /// Thus, you must keep the bytes available until after the store is created.
  int opt_model_bytes_direct(
    ffi.Pointer<OBX_store_options> opt,
    ffi.Pointer<ffi.Void> bytes,
    int size,
  ) {
    _opt_model_bytes_direct ??= _dylib.lookupFunction<_c_opt_model_bytes_direct,
        _dart_opt_model_bytes_direct>('obx_opt_model_bytes_direct');
    return _opt_model_bytes_direct(
      opt,
      bytes,
      size,
    );
  }

  _dart_opt_model_bytes_direct _opt_model_bytes_direct;

  /// /// When the DB is opened initially, ObjectBox can do a consistency check on the given amount of pages.
  /// /// Reliable file systems already guarantee consistency, so this is primarily meant to deal with unreliable
  /// /// OSes, file systems, or hardware. Thus, usually a low number (e.g. 1-20) is sufficient and does not impact
  /// /// startup performance significantly. To completely disable this you can pass 0, but we recommend a setting of
  /// /// at least 1.
  /// /// Note: ObjectBox builds upon ACID storage, which guarantees consistency given that the file system is working
  /// /// correctly (in particular fsync).
  /// /// @param page_limit limits the number of checked pages (currently defaults to 0, but will be increased in the future)
  /// /// @param leaf_level enable for visiting leaf pages (defaults to false)
  void opt_validate_on_open(
    ffi.Pointer<OBX_store_options> opt,
    int page_limit,
    bool leaf_level,
  ) {
    _opt_validate_on_open ??= _dylib.lookupFunction<_c_opt_validate_on_open,
        _dart_opt_validate_on_open>('obx_opt_validate_on_open');
    return _opt_validate_on_open(
      opt,
      page_limit,
      leaf_level ? 1 : 0,
    );
  }

  _dart_opt_validate_on_open _opt_validate_on_open;

  /// /// Don't touch unless you know exactly what you are doing:
  /// /// Advanced setting typically meant for language bindings (not end users). See OBXPutPaddingMode description.
  void opt_put_padding_mode(
    ffi.Pointer<OBX_store_options> opt,
    int mode,
  ) {
    _opt_put_padding_mode ??= _dylib.lookupFunction<_c_opt_put_padding_mode,
        _dart_opt_put_padding_mode>('obx_opt_put_padding_mode');
    return _opt_put_padding_mode(
      opt,
      mode,
    );
  }

  _dart_opt_put_padding_mode _opt_put_padding_mode;

  /// /// Advanced setting meant only for special scenarios: setting to false causes opening the database in a limited,
  /// /// schema-less mode. If you don't know what this means exactly: ignore this flag. Defaults to true.
  void opt_read_schema(
    ffi.Pointer<OBX_store_options> opt,
    bool value,
  ) {
    _opt_read_schema ??=
        _dylib.lookupFunction<_c_opt_read_schema, _dart_opt_read_schema>(
            'obx_opt_read_schema');
    return _opt_read_schema(
      opt,
      value ? 1 : 0,
    );
  }

  _dart_opt_read_schema _opt_read_schema;
